Improved Punky Willy sound emulation
Fixed sound for Taito Sure Shot (sounds awful, but like the real thing :)) and Mr. Black (Z-80 version still misses sound rom dumps though) (NMI line needs to be pulsed for these games)
Made speech work for Taito Vegas and Lady Luck - working around a strange PIA issue
Add emulation pause support for alternate sound

*** ROM SUPPORT *** Thanks to ipdb.org, Effect, Juan, Jubex77, JMan, Gore Daimon, Soren, barakandl
New:
MAC: MAC Jungle

Correct Dumps:
Bally: Judge Dredd (use L-3 Sound ROMs for corrected Deadworld sounds on machines without working/modified lock)
Joctronic: Punky Willy
LTD: Space Poker (corrected one more byte in the patched ROM)
Taito: Sure Shot (fixed bad DAC data offset in ssh_s3.bin)

Clones:
301/Bullseye (normal pinball scoring)
A.G. Football (R07u & R18u) (exact clone of A.G. Soccer-Ball)
A.G. Soccer-Ball (R07u)
Demolition Man LX-4C (competition MOD)
Demolition Man H-5C (competition MOD)
Demolition Man H-6C (competition MOD)
Dirty Harry LF-2
Eight Ball (Older version)
Getaway: High Speed II, The L-5C (competition MOD)
Junk Yard 1.2C (competition MOD)
Meteor (Bugfix)
Orbitor 1 (No Timed Game)
Star Trek: The Next Generation LX-7C (competition MOD)
Star Wars 20th Anniversary 1.07 Spanish
Time Warp L-3
Trident (Newer version, previous trident set was renamed to tridenta)



Version 2.9 (June 11th, 2017) - "Attack of the clones"
------------------------------------------------------------------------------

*** CORE/CPU *** Thanks to DJRobX, Quench and Bontango for some of these
Support for Bally's Boomerang prototype added!
 Pinfixer noticed the code was available in US patent #4,198,051,
 so we extracted it using OCR software, corrected obvious mistakes, fatal bugs and missing pieces
 until a working version of the code emerged.
 On top of that, there's also a bootleg version that works even a little better.
Support for Mirco's Spirit of 76 - finally, maybe the first commercial solid-state pinball game